# data-orchestrators

./: .env  .gitignore  .pre-commit-config.yaml  README.md
airflow_project/: .coveragerc  .env  .pylintrc  README.md  TODO.md  docker-compose.yaml  problem_statement.md  pyproject.toml  tox.ini
airflow_project/sample_data/: user-data.parquet
airflow_project/src/airflow_project/custom_operator/: parquet_to_csv_converter.py
airflow_project/src/airflow_project/dags/: download_parquet_from_s3_push_to_postgres.py
airflow_project/src/airflow_project/plugins/custom_operator/: model_converter.py  parquet_to_csv_converter.py
airflow_project/test/airflow_project/: dag_validation_test.py  download_parquet_from_s3_push_to_postgres_dag_workflow_test.py
airflow_project/test/airflow_project_test/: download_parquet_from_s3_push_to_postgres_dag_workflow_test.py
airflow_project/test/airflow_project_test/dag/: dag_validation_test.py  download_parquet_from_s3_push_to_postgres_dag_workflow_test.py  model_converter_test.py
airflow_project/test/airflow_project_test/util/: project_path.py
airflow_project/test/data/: user-data.csv
airflow_project/tests/airflow_project_tests/dag/: dag_validation_test.py  download_parquet_from_s3_push_to_postgres_dag_workflow_test.py  model_converter_test.py
airflow_project/tests/airflow_project_tests/plugins/custom_operator/: model_converter_test.py
airflow_project/tests/util/: project_path.py
airflow_project/vault_setup/: aws_minio.json  vault-script.sh
test/airflow_project/: do_nothing_test.py  (+1 more)
(+1 files in other folders)
